--- a/Plus-Weather-App/index.html
+++ b/Plus-Weather-App/index.html
@@ -12,6 +12,12 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <script
       src="https://kit.fontawesome.com/7ec36f21b0.js"
       crossorigin="anonymous"
@@ -19,40 +25,52 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
   <body>
-    <div class="float">
-      <form id="search">
-        <input
-          type="text"
-          placeholder="Search for a city"
-          class="search-box"
-          id="city-input"
-        />
-        <input
-          type="submit"
-          value="GO"
-          class="search-button"
-          id="search-input"
-        />
-      </form>
-      <div class="city-info">
-        <h2 class="current-city" id="city"></h2>
-        <div class="date-time">Tuesday 10:00</div>
-        <img src="" alt="Clear" id="icon" />
-        <br />
-        <div class="current-weather">
-          <span class="current-temperature" id="temperature"></span
-          ><span class="units-convert"
-            >°C | <a href="#" id="fahrenheit-link">F</a></span
-          ><br />
-          <span id="weather-description">Clear</span>
+    <div class="container">
+      <div class="float">
+        <form id="search">
+          <input
+            type="text"
+            placeholder="Search for a city"
+            class="search-box"
+            id="city-input"
+          />
+          <input
+            type="submit"
+            value="GO"
+            class="search-button"
+            id="search-input"
+          />
+        </form>
+        <div class="row">
+          <div class="col-6">
+            <div class="city-time">
+              <h2 class="current-city" id="city"></h2>
+              <div class="date-time">Tuesday 10:00</div>
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="icon-temp">
+                <img src="" alt="Clear" id="icon" />
+                <div class="current-weather">
+                  <span class="current-temperature" id="temperature"></span
+                  ><span class="units-convert"
+                    >°C | <a href="#" id="fahrenheit-link">F</a></span
+                  ><br />
+                  <span id="weather-description">Clear</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="weather-conditions">
+              <ul>
+                <li>Wind: <span id="wind"></span></li>
+                <li>Humidity: <span id="humidity"></span></li>
+                <!-- <li>Air quality: <span id="air-quality"></span></li> -->
+              </ul>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="weather-conditions">
-        <ul>
-          <li>Wind: <span id="wind"></span></li>
-          <li>Humidity: <span id="humidity"></span></li>
-          <li>Air quality: <span id="air-quality"></span></li>
-        </ul>
       </div>
     </div>
     <script src="src/index.js"></script>
