Added open source code link

--- a/Plus-Weather-App/index.html
+++ b/Plus-Weather-App/index.html
@@ -72,6 +72,12 @@
           </div>
         </div>
       </div>
+      <div class="byme">
+      <a href="https://github.com/bincsuu/Plus-Weather-App" target="_blank">
+        Open-source code</a
+      >
+      by Bianca Sero
+    </div>
     </div>
     <script src="src/index.js"></script>
   </body>
