--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <div class="col-12">
           <div class="weather-conditions">
             <ul>
-              <li>Wind: <span id="wind"></span></li>
-              <li>Humidity: <span id="humidity"></span></li>
+              <li>Wind: <span id="wind">m/s</span></li>
+              <li>Humidity: <span id="humidity">%</span></li>
               <!-- <li>Air quality: <span id="air-quality"></span></li> -->
             </ul>
           </div>
