--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
               <div class="current-weather">
                 <span class="current-temperature" id="temperature"></span
                 ><span class="units-convert"
-                  >°C | <a href="#" id="fahrenheit-link">F</a></span
+                  >°<a href="#" id="celsius-link" class="active">C</a> |
+                  <a href="#" id="fahrenheit-link">F</a></span
                 ><br />
                 <span id="weather-description">Clear</span>
               </div>
@@ -64,8 +65,12 @@
         <div class="col-12">
           <div class="weather-conditions">
             <ul>
-              <li>Wind: <span id="wind">m/s</span></li>
-              <li>Humidity: <span id="humidity">%</span></li>
+              <li>
+                Wind: <span id="wind"><p>m/s</p></span>
+              </li>
+              <li>
+                Humidity: <span id="humidity"><p>%</p></span>
+              </li>
               <!-- <li>Air quality: <span id="air-quality"></span></li> -->
             </ul>
           </div>
