--- a/index.html
+++ b/index.html
@@ -75,6 +75,24 @@
             </ul>
           </div>
         </div>
+        <div class="weather-forecast">
+          <div class="row">
+            <div class="col-2">
+              <div class="day">Wednesday</div>
+              <div class="daily-icon">
+                <img
+                  src="http://openweathermap.org/img/wn/50d@2x.png"
+                  alt=""
+                  id="day-icon"
+                />
+              </div>
+              <div class="forecast-temperature">
+                <span class="forecast-temp-max">18°</span
+                ><span class="forecast-temp-min"> 12°</span>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="byme">
