--- a/index.html
+++ b/index.html
@@ -65,17 +65,13 @@
         <div class="col-12">
           <div class="weather-conditions">
             <ul>
-              <li>
-                Wind: <span id="wind"><p>m/s</p></span>
-              </li>
-              <li>
-                Humidity: <span id="humidity"><p>%</p></span>
-              </li>
+              <li>Wind: <span id="wind"></span></li>
+              <li>Humidity: <span id="humidity"></span></li>
               <!-- <li>Air quality: <span id="air-quality"></span></li> -->
             </ul>
           </div>
         </div>
-        <div class="weather-forecast">
+        <div class="weather-forecast" id="forecast">
           <div class="row">
             <div class="col-2">
               <div class="day">Wednesday</div>
